--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,7 @@
 .ad-layer {
   position: absolute;
   color: #000;
-  background-color: rgba(0, 0, 0, 0.2);
-  font-family: "Georgia", sans-serif;
+  font-family: "Verdana", sans-serif;
 
   &__text {
     left: 0;
@@ -10,17 +9,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 12px;
+    font-size:  8px;
     font-weight: 100;
-    width: 100px;
-    height: 20px;
+    width: 4rem;
+    height: 1.25rem;
     border-top-right-radius: 2px;
+    pointer-events: none;
+    color: #FFFFFF;
+    background-color: rgba(0, 0, 0, 0.1);
+    @media (max-width: 768px) {
+      width: 70px;
+      height: 15px;
+      font-size:  8px;
+    }
   }
 
   &__menu {
+    font-family: "Georgia", sans-serif;
     right: 0;
     top: 0;
-    font-size: 36px;
+    font-size: 32px;
     font-weight: 500;
     width: 40px;
     height: 20px;
@@ -28,56 +36,107 @@
     line-height: 0;
     text-align: center;
     border-bottom-left-radius: 2px;
+    color: #000;
     transition: 200ms;
     &:hover {
       cursor: pointer;
-      background-color: rgba(0, 0, 0, 0.3);
+    }
+    @media (max-width: 768px) {
+      font-size: 28px;
     }
   }
 
   &__info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: #F2F3F5;
-    transition: 300ms ease-in-out;
-    transform: translateY(-100%);
+    min-height: 100%;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.65);
+    opacity: 0;
+    transition: 200ms ease;
+    transform: scale(0);
     &--active {
-      transform: translateY(0);
+      opacity: 1;
+      transform: scale(1);
     }
   }
 
   &__wrapper {
-    padding: 20px;
+    padding: 1rem;
     background-color: #FFFFFF;
     border-radius: 10px;
-    min-width: 300px;
-    width: 30%;
-    margin: 20px auto auto;
+    max-width: 250px;
+    margin: 1rem auto auto;
   }
 
   &__title {
     margin-top: 0;
-    margin-bottom: 20px;
-    font-size: 16px;
+    margin-bottom: 1rem;
+    font-size: 12px;
     font-weight: 600;
   }
 
   &__link {
+    display: block;
     color: #4074B1;
+    font-size: 12px;
     text-decoration: none;
   }
 
   &__label {
     color: #86898E;
-    font-size: 12px;
+    font-size:  8px;
     margin-top: 5px;
     margin-bottom: 5px;
   }
 
   &__row {
-    font-size: 16px;
+    font-size: 12px;
     color: #000000;
+  }
+
+  &__close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 20px;
+    height: 20px;
+    opacity: 0.3;
+    cursor: pointer;
+    transition: 300ms;
+    &:hover {
+      opacity: 1;
+    }
+    &::before, &::after {
+      position: absolute;
+      left: 15px;
+      content: ' ';
+      height: 20px;
+      width: 2px;
+      background-color: #d5d5d5;
+    }
+    &::before {
+      transform: rotate(45deg);
+    }
+    &::after {
+      transform: rotate(-45deg);
+    }
+  }
+
+  &--full-size {
+    .ad-layer__info {
+      position: fixed;
+      z-index: 1000;
+      &--active {
+        height: 100%;
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
   }
 }
